<resources>
    <!-- Progress Dialog -->
    <string name="progress_dialog_loading">Loading\.\.\.</string>

    <!-- Settings -->
    <string name="txt_settings">Settings</string>
    <string name="txt_account">Account</string>
    <string name="txt_more">More</string>
    <string name="txt_about_profile">About Profile</string>
    <string name="txt_sign_in_or_create_account">Sign In/Sign Up</string>
    <string name="txt_sign_in_via_qr_code">Sign in via QR Code</string>
    <string name="txt_orders">Orders</string>
    <string name="txt_favorite_product">Favorite Product</string>
    <string name="txt_sign_out">Logout</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_stop_notification">Stop Notification</string>
    <string name="txt_app_notifications">App Notifications</string>
    <string name="txt_app_language">App Language</string>
    <string name="txt_about_app">About App</string>
    <string name="txt_download_app">Download App</string>
    <string name="txt_support">Support</string>
    <string name="txt_scan_qr_code_to_download_the_app">Scan QR code to download the app!</string>
    <string name="txt_settings_or">or</string>
    <string name="txt_share_with">Share with</string>

    <!-- Settings>> Language -->
    <string name="txt_language_english">App Language(English)</string>
    <string name="txt_language_bengali">App Language(Bengali)</string>

    <!-- Home -->
    <string name="txt_ki">Ki</string>
    <string name="txt_lagbe">Lagbe?</string>
    <string name="txt_lagbe_naki">Lagbe Naki?</string>
    <string name="txt_search_here">Search here\.\.\.</string>
    <string name="txt_category">Category</string>
    <string name="txt_popular_product">Popular</string>
    <string name="txt_new_product">What\'s New</string>

    <!-- Search -->
    <string name="txt_search">Search</string>
    <string name="txt_product">Product</string>
    <string name="txt_suggestion">Suggestion</string>

    <!-- Cart -->
    <string name="txt_cart">Cart</string>
    <string name="txt_summary">Summary</string>
    <string name="txt_shipping_information">Shipping Information</string>
    <string name="txt_receivers_name">Receiver\'s Name</string>
    <string name="txt_receivers_mobile_number">Receiver\'s Mobile Number</string>
    <string name="txt_receivers_address">Receiver\'s Address</string>
    <string name="txt_shipping_time">Usually, we ship your order within one hour. But in case if there is any problem due to any kind of interruption, we will notify the receiver over the phone</string>
    <string name="txt_payment_system">Payment System</string>
    <string name="txt_i_will_pay_cash_on_delivery">I will pay cash on delivery</string>
    <string name="txt_plus">+</string>
    <string name="txt_minus">-</string>
    <string name="complete_order_question">"Are you sure you want to complete order?</string>
    <string name="txt_cart_detail">CART DETAIL</string>
    <string name="clear_all">Clear All</string>
    <string name="complete_order">COMPLETE ORDER</string>
    <string name="multiplier">X</string>
    <string name="back_to_vitrin">BACK TO VITRIN</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="cart_clean">Your cart is as clean as the first day.</string>
    <string name="sent_order">Your order has been successfully completed. :)</string>
    <string name="failed_order">Something went wrong. :(</string>
    <string name="sending_order">Your order is being completed, please wait.</string>
    <string name="delete_all_orders">Are you sure you want to delete all orders?</string>
    <string name="txt_there_is_no_item_into_cart">There is no item into cart</string>
    <string name="txt_order_now">Order Now(%d)</string>
    <string name="txt_item_quantity_should_more_than_zero">Item quantity should more than zero</string>
    <string name="txt_select_at_least_one_product">Select at least one product</string>
    <string name="txt_minimum_order_amount_excluding_shipping_charge">Minimum order amount %d Tk excluding shipping charge</string>
    <string name="txt_tk">Tk</string>
    <string name="txt_subtotal">Subtotal</string>
    <string name="txt_grand_total">Grand Total</string>
    <string name="txt_shipping_charge">Shipping Charge</string>
    <string name="txt_minimum_shipping_charge_may_vary_depending_on_the_product_weight_and_distance">Minimum Shipping charge(may vary depending on the product weight and shipping distance)</string>
    <string name="txt_amount_with_taka">%d Tk</string>
    <string name="txt_please_input_a_receivers_name">Please input a receiver\'s name</string>
    <string name="txt_please_input_a_receivers_mobile_number">Please input a receiver\'s mobile number</string>
    <string name="txt_please_input_a_valid_receivers_mobile_number">Please input a valid receiver\'s mobile number</string>
    <string name="txt_please_input_a_receivers_address">Please input a receiver\'s address</string>
    <string name="txt_please_select_the_payment_system">Please select the payment system</string>
    <string name="txt_do_you_want_to_save_the_address">Do you want to save address?</string>
    <string name="txt_please_confirm_the_shipping_charge">Please confirm shipping charge</string>
    <string name="txt_please_confirm_the_shipping_time">Please confirm shipping time</string>

    <!-- Dialog -->
    <string name="txt_ok">Ok</string>
    <string name="txt_warning">Warning</string>
    <string name="txt_confirmation">Confirmation</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_runtime_permission_dialog">Without accepting the required permissions you cannot use the app properly. Do you want to accept the permission again?</string>

    <!-- Product Detail -->
    <string name="txt_product_detail">Product Detail</string>
    <string name="txt_unit">Unit</string>
    <string name="txt_providers">Providers</string>
    <string name="txt_unit_price">Unit price</string>
    <string name="txt_note">Note</string>
    <string name="txt_name">Name</string>
    <string name="txt_product_description">Product description</string>

    <!--Sign In Screen-->
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_mobile_no">Mobile Number</string>
    <string name="txt_password">Password</string>
    <string name="txt_or_connect_with">or connect with</string>
    <string name="txt_dont_have_any_account_sign_up_now">Don\'t have any account? Sign up now</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_gmail">Gmail</string>
    <string name="txt_forgot_password_reset_now">Forgot password? Reset now</string>

    <!--Sign Up Screen-->
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_already_have_account_sign_in_now">Already have account? Sign in now</string>

    <!-- About App -->
    <string name="app_version_text">Version:</string>
    <string name="app_author">MeembuSoft Team</string>
    <string name="app_author_email">codegarage.tech.us@gmail.com</string>
    <string name="app_contact_subject">"Contact Support"</string>
    <string name="app_contact_body">""</string>
    <string name="app_publisher_id">8721116055633300205</string>
    <string name="app_publisher_facebook_id">CodeGarage-563906867283858</string>
    <string name="app_publisher_twitter_id">codegarage_tech</string>
    <string name="app_publisher_profile_website">http://www.codegarage.tech/</string>
    <string name="app_publisher_company_html_path">http://www.codegarage.tech/</string>
    <string name="app_publisher_privacy_html_path">http://codegarage.tech/privacy_and_policy.html</string>
    <string name="app_publisher_acknowledgment_html_path">http://codegarage.tech/terms_and_conditions.html</string>
    <string name="app_play_store_url">https://play.google.com/store/apps/details?id=%1$s</string>

    <!-- Forgot Password -->
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_just_submit_the_email_address">Just submit the email address you\'ve used to register with us and we will send you a password reset link!</string>
    <string name="txt_input_registered_email_address">Input registered email address</string>
    <string name="txt_input_registered_mobile_number">Input registered mobile number</string>
    <string name="txt_just_submit_the_mobile_number">Just submit the mobile number you\'ve used to register with us and we will send you a password reset link!</string>
    <string name="txt_submit_email_address">SUBMIT EMAIL ADDRESS</string>
    <string name="txt_or">or</string>
    <string name="txt_please_input_an_email_address">Please input an email address</string>
    <string name="txt_please_input_a_valid_email_address">Please input a valid email address</string>

    <!-- About Profile -->
    <string name="txt_occupation">Occupation</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_birth_date">Birth Date</string>
    <string name="txt_address">Address</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_third_gender">Third Gender</string>
    <string name="txt_please_input_a_full_name">Please input a full name</string>
    <string name="txt_please_input_a_mobile_number">Please input a mobile number</string>
    <string name="txt_please_input_a_valid_mobile_number">Please input a valid mobile number</string>
    <string name="txt_please_input_a_password">Please input a password</string>
    <string name="txt_please_select_a_gender">Please select a gender</string>
    <string name="txt_optional">(optional)</string>
    <string name="txt_offer">Offer</string>
    <string name="txt_add_your_birth_date">Add your birth date for getting a special gift on your upcoming birthday</string>

    <!-- Order -->
    <string name="txt_pending">Pending</string>
    <string name="txt_order_has_been_placed_and_under_review">Order has been placed and under review</string>
    <string name="txt_order_order_has_been_accepted">Order has been accepted</string>
    <string name="txt_order_has_been_canceled">Order has been canceled</string>
    <string name="txt_order_processing_has_been_started">Order processing has been started</string>
    <string name="txt_order_processing_has_been_finished">Order processing has been finished</string>
    <string name="txt_delivery_man_has_started_moving">Delivery man has started moving with your products</string>
    <string name="txt_delivery_man_has_reached">Delivery man has reached with your products</string>
    <string name="txt_payment_has_been_received_by_delivery_man">Payment has been received by delivery man</string>
    <string name="txt_order_is_completed">Order is completed</string>

    <!-- Order Detail -->
    <string name="txt_order_status">Order Status</string>
    <string name="txt_products">Products</string>
    <string name="txt_orders_information">Order\'s Information</string>
    <string name="txt_cash_on_delivery">Cash on delivery</string>
    <string name="txt_x">X</string>
</resources>