<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/screenBgColor"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_200"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/vector_forgot_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_15"
                android:gravity="center"
                android:text="@string/txt_forgot_password"
                android:textColor="@color/paragraphTextColor"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_30"
                android:gravity="center"
                android:textColor="@color/paragraphTextColor"
                android:text="@string/txt_just_submit_the_email_address"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/shape_rectangle_bg_primary"
                android:hint="@string/txt_input_registered_email_address"
                android:paddingLeft="@dimen/dp_15"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/dp_15"
                android:textColorHint="@color/hintsTextColor"
                android:textColor="@color/paragraphTextColor"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit_email_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/selector_rounded_rectangle_primary"
                android:text="@string/txt_submit_email_address"
                android:textColor="@color/blueLight"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>