<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/llDialog"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/dp_10">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="@dimen/dp_150"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/productView"
            android:layout_alignStart="@id/productView"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"/>

        <com.steelkiwi.library.IncrementProductView
            android:id="@+id/productView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:ipv_add_icon="@drawable/ic_plus"
            app:ipv_default_background_color="@color/colorPrimary"
            app:ipv_highlight_background_color="@color/colorAccent"
            app:ipv_text_color="@android:color/white"
            app:ipv_text_size="@dimen/text_size"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtItemName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_5"
        android:paddingRight="@dimen/dp_5"
        android:textColor="@color/colorItemName"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorItemDetailBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="start|center"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtMultiplier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="start|center"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:text="@string/multiplier"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_15"/>

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="start|center"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_15"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtExtendedPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/dp_5"
            android:gravity="start|center"
            android:paddingStart="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_30">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/sub_category_item"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/back_to_vitrin"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/sub_category_selected_item"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>